[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "streamlit>=1.46.1",
    "trafilatura>=2.0.0",
    "yagmail>=0.15.293",
]
